<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".fragments.MySportsFragment">

    <ListView
        android:id="@+id/sports_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/actionButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/add_sport"
        android:id="@+id/add_sport"/>

</androidx.constraintlayout.widget.ConstraintLayout>
