<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.MySportsFragment">

    <ListView
        android:id="@+id/activities_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/actionButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/add_activity"
        android:id="@+id/add_activity"/>

</androidx.constraintlayout.widget.ConstraintLayout>