<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/activity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_description"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:autofillHints="@string/activity_description" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sport_select"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:id="@+id/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/add_activity"
            android:id="@+id/add_activity"/>

    </LinearLayout>

</LinearLayout>
